Update entity model and configuration
When running the application, the table is created in the database succesfully

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,11 @@
 spring.application.name=apirest
-spring.datasource.url=jdbc:mysql://localhost:3306/mi_base_de_datos
+spring.datasource.url=jdbc:mysql://localhost:3306/api-rest-spring-boot
 spring.datasource.username=root
 spring.datasource.password=
 
+# Con hibernate.ddl-auto=update, la base de datos se crea solo si no existe, y se actualiza si ya existe
 spring.jpa.hibernate.ddl-auto=update
+# Para mostrar las consultas SQL en la consola
 spring.jpa.show-sql=true
+# Configuración del dialecto de Hibernate para MySQL 8
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
